--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.14.0",
     "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
